# TauriLabels_ccs

./: .eslintrc.js  .firebaserc  README.md  package-lock.json  package.json
.github/workflows/: tauri-release.yml
docs/: blueprint.md
functions/: package-lock.json
public/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BusinessCard.tsx  CardGenerator.tsx  PreviewPanel.tsx  PrintLayout.tsx  SettingsPanel.tsx
src/components/ui/: sidebar.tsx
src/hooks/: use-mobile.tsx  use-toast.ts
src/lib/: constants.ts  types.ts
