[package]
name = "tauri_labels"
version = "0.1.0"
edition = "2021"
description = "TauriLabels app"
authors = ["TauriLabels Developers"]

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
